--- a/practice2.html
+++ b/practice2.html
@@ -13,7 +13,7 @@
 
         <a href="/login"><button class="me">login</button></a>
         <a href="/redirect"><button class="me">Redirect</button></a>
-        <img class="image" src="/static/pravin.jpg" width="300px">
+        <img class="image" src="/pravin.jpg" width="300px">
         <h1>
             my name is <em><strong>Pravin Acharya</strong></em>
         </h1>
@@ -22,11 +22,11 @@
     <section class="goals">
       <div class="pra">
         <h2>about me</h2>
-        <p>hi i'm pravin,who was rejected by two girls and improving to better version of myself.</p>
+        <p>hi i'm pravin,who was rejected by many girls and improving to better version of himself.</p>
       </div>
       <div class="pra">
         <h2>my goals</h2>
-        <p>my goal is to become skillful person having high income in 7digits.</p>
+        <p>my goal is to become skillful person </p>
 
       </div>
       <div class="pra">
