--- a/practice2.html
+++ b/practice2.html
@@ -30,8 +30,8 @@
 
       </div>
       <div class="pra">
-        <h2>my skills</h2>
-        <p>i'm yet developing my skills.</p>
+        <h2>Acknowledgement</h2>
+        <p>special thanks to mu vinaju suraj mudwari for supporting me /n special thanks to my two beautiful and lovely sisters Rabina ACharya and Pabina achara .They supported me everytime. /n And at last how can i forget my innocent mon and dad .God they are too innocent for this cruel world please save them </p>
       </div>
 
     </section >
