--- a/practice2.html
+++ b/practice2.html
@@ -9,10 +9,8 @@
 <body>
     <section class="attractive"  >
       <div>
-        <a href="/pravin"><button class="me">click me</button></a>
-
-        <a href="/login"><button class="me">login</button></a>
-        <a href="/redirect"><button class="me">Redirect</button></a>
+        <a><button onclick=alert("have a wonderful day") class="me">click me</button></a>
+          
         <img class="image" src="/pravin.jpg" width="300px">
         <h1>
             my name is <em><strong>Pravin Acharya</strong></em>
@@ -21,19 +19,20 @@
     </section>
     <section class="goals">
       <div class="pra">
-        <h2>about me</h2>
+        <h>about me</h>
         <p>hi i'm pravin,who was rejected by many girls and improving to better version of himself.</p>
       </div>
+          <div class="pra">
+        <h>Acknowledgement</h>
+        <p>special thanks to my vinaju suraj mudwari for supporting me </p> 
+          <p>special thanks to my two beautiful and lovely sisters Rabina ACharya and Pabina acharay .They supported me everytime.</p> 
+          <p>And at last how can i forget my innocent mon and dad .God they are too innocent for this cruel world please save them </p>
+      </div>
       <div class="pra">
-        <h2>my goals</h2>
+        <h>my goals</h>
         <p>my goal is to become skillful person </p>
 
       </div>
-      <div class="pra">
-        <h2>Acknowledgement</h2>
-        <p>special thanks to mu vinaju suraj mudwari for supporting me /n special thanks to my two beautiful and lovely sisters Rabina ACharya and Pabina achara .They supported me everytime. /n And at last how can i forget my innocent mon and dad .God they are too innocent for this cruel world please save them </p>
-      </div>
-
     </section >
     <section class="contact">
       <div>
