--- a/practice2.html
+++ b/practice2.html
@@ -3,47 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hancy pravin</title>
+    <title>Professional Portfolio - Pravin Acharya</title>
     <link rel="stylesheet" href="/style.css">
-    </head>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        section {
+            padding: 40px;
+            margin: 20px 0;
+        }
+        .attractive {
+            background-color: #f9f9f9;
+            text-align: center;
+        }
+        .attractive h1 {
+            margin-bottom: 20px;
+        }
+        .goals {
+            background-color: #f3f3f3;
+            text-align: center;
+        }
+        .goals .pra {
+            margin-bottom: 30px;
+        }
+        .contact {
+            background-color: #e6e6e6;
+            text-align: center;
+        }
+        .contact p {
+            margin-bottom: 10px;
+        }
+        .contact h2 {
+            margin-bottom: 20px;
+        }
+        .button {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+    </style>
+</head>
 <body>
-    <section class="attractive"  >
-      <div>
-        <a><button onclick=alert("have a wonderful day") class="me">click me</button></a>
-          
-        <img class="image" src="/pravin.jpg" width="300px">
-        <h1>
-            my name is <em><strong>Pravin Acharya</strong></em>
-        </h1>
-      </div>
+    <section class="attractive">
+        <div>
+            <button onclick="alert('Have a wonderful day!')" class="button">Click Me</button>
+            <img class="image" src="/pravin.jpg" width="300px" alt="Pravin Acharya">
+            <h1>My name is <em><strong>Pravin Acharya</strong></em></h1>
+        </div>
     </section>
     <section class="goals">
-      <div class="pra">
-        <h>about me</h>
-        <p>hi i'm pravin,who was rejected by many girls and improving to better version of himself.</p>
-      </div>
-          <div class="pra">
-        <h>Acknowledgement</h>
-        <p>special thanks to my vinaju suraj mudwari for supporting me </p> 
-          <p>special thanks to my two beautiful and lovely sisters Rabina ACharya and Pabina acharay .They supported me everytime.</p> 
-          <p>And at last how can i forget my innocent mon and dad .God they are too innocent for this cruel world please save them </p>
-      </div>
-      <div class="pra">
-        <h>my goals</h>
-        <p>my goal is to become skillful person </p>
-
-      </div>
-    </section >
-    <section class="contact">
-      <div>
-       <h2>contact me</h2>
-       <p>interested in working together?let's chat.</p>
-       <p>email:acharyaprabin72@gmail.com</p>
-       <p>contact:9840749087</p>
-      </div>
-
-
+        <div class="pra">
+            <h2>About Me</h2>
+            <p>Hi, I'm Pravin. I'm constantly striving to improve myself after facing various challenges.</p>
+        </div>
+        <div class="pra">
+            <h2>Acknowledgements</h2>
+            <p>Special thanks to my mentor, Suraj Mudwari, for his unwavering support.</p>
+            <p>I'm grateful to my sisters, Rabina Acharya and Pabina Acharya, for their constant encouragement.</p>
+            <p>Lastly, my loving parents, who I cherish dearly. May they be protected from the hardships of this world.</p>
+        </div>
+        <div class="pra">
+            <h2>My Goals</h2>
+            <p>My goal is to continuously develop my skills and become a better person.</p>
+        </div>
     </section>
-    
+    <section class="contact">
+        <div>
+            <h2>Contact Me</h2>
+            <p>Interested in working together? Let's connect!</p>
+            <p>Email: acharyaprabin72@gmail.com</p>
+            <p>Contact: 9840749087</p>
+        </div>
+    </section>
 </body>
 </html>
