--- a/practice2.html
+++ b/practice2.html
@@ -70,9 +70,9 @@
         </div>
         <div class="pra">
             <h2>Acknowledgements</h2>
-            <p>Special thanks to my mentor, Suraj Mudwari, for his unwavering support.</p>
-            <p>I'm grateful to my sisters, Rabina Acharya and Pabina Acharya, for their constant encouragement.</p>
-            <p>Lastly, my loving parents, who I cherish dearly. May they be protected from the hardships of this world.</p>
+            <p>Special thanks to my vinaju, Suraj Mudwari, for his unwavering support.</p>
+            <p>I'm grateful to my bautiful and lovely sisters, Rabina Acharya and Pabina Acharya, for their constant encouragement.</p>
+            <p>Lastly, my loving parents, may god protrct them,they are too innocent for this cruel world.</p>
         </div>
         <div class="pra">
             <h2>My Goals</h2>
