--- a/practice2.html
+++ b/practice2.html
@@ -19,9 +19,33 @@
         .attractive {
             background-color: #f9f9f9;
             text-align: center;
+            position: relative; /* Add position relative */
         }
         .attractive h1 {
             margin-bottom: 20px;
+        }
+        /* Define the scroll-down animation */
+        @keyframes scrollDown {
+            0% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+            50% {
+                opacity: 0.6;
+                transform: translateY(10px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        /* Apply the scroll-down animation to the scroll-down element */
+        .scroll-down {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            animation: scrollDown 1.5s infinite;
         }
         .goals {
             background-color: #f3f3f3;
@@ -53,6 +77,11 @@
             cursor: pointer;
             border-radius: 5px;
         }
+        .image {
+            display: block;
+            margin: 0 auto;
+            opacity: 0.6;
+        }
     </style>
 </head>
 <body>
@@ -61,6 +90,7 @@
             <button onclick="alert('Have a wonderful day!')" class="button">Click Me</button>
             <img class="image" src="/pravin.jpg" width="300px" alt="Pravin Acharya">
             <h1>My name is <em><strong>Pravin Acharya</strong></em></h1>
+            <div class="scroll-down">⇣</div> <!-- Scroll down icon -->
         </div>
     </section>
     <section class="goals">
