--- a/practice2.html
+++ b/practice2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Portfolio - Pravin Acharya</title>
+    <title> Pravin Acharya</title>
     <link rel="stylesheet" href="/style.css">
     <style>
         body {
@@ -19,12 +19,12 @@
         .attractive {
             background-color: #f9f9f9;
             text-align: center;
-            position: relative; /* Add position relative */
+            position: relative; 
         }
         .attractive h1 {
             margin-bottom: 20px;
         }
-        /* Define the scroll-down animation */
+    
         @keyframes scrollDown {
             0% {
                 opacity: 1;
@@ -39,14 +39,15 @@
                 transform: translateY(0);
             }
         }
-        /* Apply the scroll-down animation to the scroll-down element */
-        .scroll-down {
-            position: absolute;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            animation: scrollDown 1.5s infinite;
-        }
+    .scroll-down {
+    position: absolute;
+    bottom: 40px; 
+    left: 50%;
+    transform: translateX(-50%);
+    animation: scrollDown 1.5s infinite;
+    font-size: 36px;
+    color: #4CAF50; 
+}
         .goals {
             background-color: #f3f3f3;
             text-align: center;
@@ -90,7 +91,7 @@
             <button onclick="alert('Have a wonderful day!')" class="button">Click Me</button>
             <img class="image" src="/pravin.jpg" width="300px" alt="Pravin Acharya">
             <h1>My name is <em><strong>Pravin Acharya</strong></em></h1>
-            <div class="scroll-down">⇣</div> <!-- Scroll down icon -->
+            <div class="scroll-down">⇣</div> 
         </div>
     </section>
     <section class="goals">
@@ -101,7 +102,7 @@
         <div class="pra">
             <h2>Acknowledgements</h2>
             <p>Special thanks to my vinaju, Suraj Mudwari, for his unwavering support.</p>
-            <p>I'm grateful to my bautiful and lovely sisters, Rabina Acharya and Pabina Acharya, for their constant encouragement.</p>
+            <p>I'm grateful to my beautiful and lovely sisters, Rabina Acharya and Pabina Acharya, for their constant encouragement.</p>
             <p>Lastly, my loving parents, may god protrct them,they are too innocent for this cruel world.</p>
         </div>
         <div class="pra">
