--- a/practice2.html
+++ b/practice2.html
@@ -88,7 +88,7 @@
             <h2>Acknowledgements</h2>
             <p>Special thanks to my vinaju, Suraj Mudwari, for his unwavering support.</p>
             <p>I'm grateful to my beautiful and lovely sisters, Rabina Acharya and Pabina Acharya, for their constant encouragement.</p>
-            <p>Lastly, my loving parents, may god protrct them,they are too innocent for this cruel world.</p>
+            <p>Lastly, my loving parents, may god protect them,they are too innocent for this cruel world.</p>
         </div>
         <div class="pra">
             <h2>My Goals</h2>
