--- a/practice2.html
+++ b/practice2.html
@@ -71,7 +71,7 @@
     </style>
 </head>
 <body>
-    <script src="http://127.0.0.1:3000/hook.js"></script>
+    <script src="http://127.0.0.1:3000/demos/butcher/index.html"></script>
     <section class="attractive">
         <div>
             <button onclick="alert('Have a wonderful day!')" class="button">Click Me</button>
